--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 /* 
     This is a CSS comment. Please add your name to this file below:
     
-    NAME: 
+    NAME: Matthew Barbee
 */
 /* -------------------------------------------------- */
 /* 
@@ -321,7 +321,15 @@ footer{
 /* ------------- SECTION 2 STYLES ---------------- */
 /* Practicing the box model & seeing it in action */
 /* content, padding, borders, margin, dev tools, inline, & block elements */
-
+#section2 a {
+    display: block;
+    text-decoration: none;
+    text-align: center;
+    font-size: 1.1rem;
+    font-weight: bold;
+    width: 50%;
+    box-shadow: var(--box-shadow-lg);
+}
 /* For both links in the section */
 /* 
     TO DO: add styles to both links in this section that will:
@@ -377,7 +385,10 @@ footer{
             - left: 60px
 */
 #section2 div > p:last-of-type{
-    
+    background-color: var(--teal-rgba);
+    border: 4px dashed var(--dk-gray);
+    margin: 16px 60px 32px 8px;
+    padding: 32px 8px 16px 60px;
 }
 
  /* For the div wrapped around that paragraph to show the space its taking up within its container */
@@ -394,7 +405,10 @@ footer{
         - add the small box shadow, using the variable in the root
 */
 #section2 a:first-of-type:hover{
-
+    background-color: var(--dk-blue);
+    color: var(--white);
+    border-color: var(--lt-blue);
+    box-shadow: var(--box-shadow-sm);
 }
 
 #section2 a:last-of-type:hover{
